What's New for PSPRadio 
========================

0.37-pre1
(jpfouch48) Added scrolling text to metadata area. (Currently double buffering
is not working so it may look alittle choppy)
(sandberg) Added a radial blur effect as a background effect on the 3D UI.

0.36-final (svn.berlios.de/svnroot/repos/pspradio/Releases/PSPRadio0.36/)
(raf) If AUTOSTART set to 1 in config file, App starts in Options screen, starts the network, then goes back to main screen.
(raf) Lots of cleanup / refactoring
(raf) Now downloads a compressed version of SHOUTcast.com's database instead. Thanks to echto again for providing the routines to do the zlib uncompression, and SHOUTcast.com db download URL service setup, etc!!
(sandberg) Added a particle system as a new background effect for the 3D UI.
(raf) Simplified wifi selection. One option to select profile or turn off.
(raf) Screens are classes now. If going back and forth between screens, they will retain their state.
(sandberg) Added support for taking screenshots. Use the Hold button to take a screenshot. When the LED stops flashing the screenshot is stored in the Screenshots folder (you need to create that folder, if you don't have it already).
(raf) Modified the pspsdk's text rendering system to allow for png backgrounds and transparent text.
(raf) Gave the TextUI a facelift by using backgrounds for the different screens.. This is configurable via the cfg file.
(raf) Fixed bug where if the playlist was empty, garbage was being used when the user pressed X or O.
(sandberg) Added support repeated and long key presses. The repeated key presses are usefull when navigating the playlists.
(sandberg) Moved the screenshot function to be activated on a long key press on Select (appr. 1 second). The screenshot will be taken when releasing the button.
(raf) Backup the db in case the download fails.
(raf) Disabled the HOME menu button for now. To exit PSPRadio, go to Options and select Exit.
(raf) Enabled the CPU speed change option.